change logo of master

--- a/main.tex
+++ b/main.tex
@@ -440,9 +440,9 @@ C\# & \circles{3}{6}
 
                                    % ------ Education ------ %
 \sectionline{Education}                                 
-                                % ------ Master Head ------ %                         
+                                  % ------ Master Head ------ %                         
 {\hspace{1.5em}}\begin{tabular}{@{}m{0.5cm}@{\hspace{0.5em}}m{2.2cm}@{\hspace{0.5em}}m{15cm}@{}}
-  \raisebox{1.3em}{\includegraphics[width=0.9cm]{images/scantinel_logo.png}} & 
+  \raisebox{1.3em}{\includegraphics[width=0.9cm]{images/ilmenau1_logo.png}} & 
   \raisebox{1.8em}{\begin{minipage}[t]{\linewidth}
   \centering
     \textcolor{blocktitle1_color}{Sep. 14}\\
@@ -465,7 +465,7 @@ C\# & \circles{3}{6}
 
                                          
                                  
-                                         % ------ Bachelor Head ------ %  
+                                   % ------ Bachelor Head ------ %  
 \vspace{0.4em}                       
 \begin{tabular}{@{}m{0.5cm}@{\hspace{0.5em}}m{2.2cm}@{\hspace{0.5em}}m{15cm}@{}}
   \raisebox{1.3em}{\includegraphics[width=1cm]{images/astmt5_logo.png}} & 
